--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
 RewriteEngine On
-RewriteCond %{REQUEST_URI} ^(.*)/index.html$
-RewriteRule ^(.*)$ %1/ [R=301,L]
+
+# redirecionar a URL raiz para a página index.html
+RewriteRule ^$ index.html [L]
+
+# redirecionar a URL /quiz para a página quiz.html
+RewriteRule ^quiz$ quiz.html [L]
+
